# go-rust-demo

./: .gitignore  Cargo.toml  Makefile  README.md  cbindgen.toml  lib.go
api/: api.go  api_test.go  bindings.h
src/: error.rs  lib.rs  memory.rs
