[package]
name = "go-rust-demo"
version = "0.1.0"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2018"
description = "Demo binding a Rust library to a Go application"
repository = "https://github.com/confio/go-rust-demo"
license = "Apache-2.0"
readme = "README.md"
exclude = [".circleci/*", ".gitignore"]

[lib]
crate-type = ["cdylib"]

[dependencies]
errno = "0.2"

[build-dependencies]
cbindgen = { version = "0.9.1" }

[profile.release]
opt-level = 2
lto = true
panic = "unwind"